# V-SYS_TWMailer

./: CMakeLists.txt  readme.txt
MyClient/: Makefile  myclient.cpp
MyServer/: ClientHandler.cpp  ClientHandler.h  DeleteMessage.cpp  DeleteMessage.h  LdapLogin.cpp  LdapLogin.h  ListMessage.cpp  ListMessage.h  Makefile  MyServer  Quit.cpp  Quit.h  ReadMessage.cpp  ReadMessage.h  SendMessage.cpp  SendMessage.h  ServerOperation.cpp  ServerOperation.h  TimeOutManager.cpp  TimeOutManager.h  User.cpp  User.h  help.cpp  help.h  mySocket.cpp  mySocket.h  myserver.cpp
messages/b/: 1508322594151.txt
messages/fff/: 1508327168604.txt
messages/if13b393/: 1508229245800.txt
